<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mwolfinspace.pascalbook.ChonNoiDung">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topbar"
            android:background="#fff9c4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tenchude"
                style="@style/co_chu_tieu_de"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/mdchude" />

            <TextView
                android:id="@+id/gioithieu"
                style="@style/co_chu_noi_dung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:text="@string/mdgioithieu" />

            <LinearLayout
                android:id="@+id/timhieubutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f48fb1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/timhieuicon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:background="@color/colorPrimary" />

                <TextView
                    style="@style/co_chu_tieu_de"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="10"
                    android:text="@string/th" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vidubutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#90caf9"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/viduicon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:background="#c0ca33" />

                <TextView
                    style="@style/co_chu_tieu_de"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="10"
                    android:text="@string/vd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/thuchanhbutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffee58"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/thuchanhicon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:background="#d84315" />

                <TextView
                    style="@style/co_chu_tieu_de"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="10"
                    android:text="@string/thanh" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tracnghiembutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#b2ff59"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/tracnghiemicon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:background="#9c27b0" />

                <TextView
                    style="@style/co_chu_tieu_de"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="10"
                    android:text="@string/trac_nghiem" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_home" />


</android.support.design.widget.CoordinatorLayout>
